Fix z-index for the zoom image component

--- a/pixventure_front/src/app/[mainCategorySlug]/[postSlug]/[itemId]/ItemViewerPage.module.scss
+++ b/pixventure_front/src/app/[mainCategorySlug]/[postSlug]/[itemId]/ItemViewerPage.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   background-color: black;
-  z-index: 0;
+  z-index: 6;
 }
 
 .overlay {
@@ -10,7 +10,6 @@
   top: 20px;
   left: 20px;
   color: white;
-  z-index: 10;
 }
 
 .navButtons {
